Mass migrate tests to AssertJ