@@ -26,6 +26,7 @@ import org.dockbox.hartshorn.inject.graph.ConfigurableDependencyContext;
 import org.dockbox.hartshorn.inject.graph.DependencyGraph;
 import org.dockbox.hartshorn.inject.graph.DependencyGraphBuilder;
 import org.dockbox.hartshorn.inject.graph.DependencyMap;
+import org.dockbox.hartshorn.inject.graph.DependencyResolutionException;
 import org.dockbox.hartshorn.inject.graph.DependencyResolutionType;
 import org.dockbox.hartshorn.inject.graph.DependencyResolver;
 import org.dockbox.hartshorn.inject.graph.TypePathNode;
@@ -45,7 +46,6 @@ import org.dockbox.hartshorn.util.graph.GraphNode;
 import org.dockbox.hartshorn.util.introspect.view.ConstructorView;
 import org.dockbox.hartshorn.util.introspect.view.TypeView;
 import org.dockbox.hartshorn.util.introspect.view.View;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -64,6 +64,8 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 @HartshornIntegrationTest(includeBasePackages = false)
 public class CircularDependencyTests {
 
@@ -72,228 +74,232 @@ public class CircularDependencyTests {
 
     @Test
     @TestComponents({CircularDependencyA.class, CircularDependencyB.class})
-    void testCircularDependenciesAreCorrectOnFieldInject() {
-        CircularDependencyA a =
-            Assertions.assertDoesNotThrow(() -> this.applicationContext.get(CircularDependencyA.class));
-        CircularDependencyB b =
-            Assertions.assertDoesNotThrow(() -> this.applicationContext.get(CircularDependencyB.class));
+    void circularDependenciesAreCorrectOnFieldInject() {
+        CircularDependencyA a = this.applicationContext.get(CircularDependencyA.class);
+        CircularDependencyB b = this.applicationContext.get(CircularDependencyB.class);
 
-        Assertions.assertNotNull(a);
-        Assertions.assertNotNull(b);
+        assertThat(a).isNotNull();
+        assertThat(b).isNotNull();
 
-        Assertions.assertSame(a, b.a());
-        Assertions.assertSame(b, a.b());
+        assertThat(b.a()).isSameAs(a);
+        assertThat(a.b()).isSameAs(b);
     }
 
     public static Stream<Arguments> circularDelayedResolution() {
         return Stream.of(
-            // Circular, but can use delayed resolution
-            Arguments.of(List.of(CircularDependencyA.class, CircularDependencyB.class)),
-            Arguments.of(List.of(CircularDependencyB.class, CircularDependencyA.class))
+                // Circular, but can use delayed resolution
+                Arguments.of(List.of(CircularDependencyA.class, CircularDependencyB.class)),
+                Arguments.of(List.of(CircularDependencyB.class, CircularDependencyA.class))
         );
     }
 
     public static Stream<Arguments> circularImmediateResolution() {
         return Stream.of(
-            // Circular, needs immediate resolution but cannot
-            Arguments.of(List.of(CircularConstructorA.class, CircularConstructorB.class)),
-            Arguments.of(List.of(CircularConstructorB.class, CircularConstructorA.class)),
-            // Circular, but in longer cycles
-            Arguments.of(List.of(LongCycleA.class,
-                LongCycleB.class,
-                LongCycleC.class,
-                LongCycleD.class)),
-            Arguments.of(List.of(LongCycleB.class,
-                LongCycleC.class,
-                LongCycleD.class,
-                LongCycleA.class)),
-            Arguments.of(List.of(LongCycleC.class,
-                LongCycleD.class,
-                LongCycleA.class,
-                LongCycleB.class)),
-            Arguments.of(List.of(LongCycleD.class,
-                LongCycleA.class,
-                LongCycleB.class,
-                LongCycleC.class))
+                // Circular, needs immediate resolution but cannot
+                Arguments.of(List.of(CircularConstructorA.class, CircularConstructorB.class)),
+                Arguments.of(List.of(CircularConstructorB.class, CircularConstructorA.class)),
+                // Circular, but in longer cycles
+                Arguments.of(List.of(LongCycleA.class,
+                        LongCycleB.class,
+                        LongCycleC.class,
+                        LongCycleD.class)),
+                Arguments.of(List.of(LongCycleB.class,
+                        LongCycleC.class,
+                        LongCycleD.class,
+                        LongCycleA.class)),
+                Arguments.of(List.of(LongCycleC.class,
+                        LongCycleD.class,
+                        LongCycleA.class,
+                        LongCycleB.class)),
+                Arguments.of(List.of(LongCycleD.class,
+                        LongCycleA.class,
+                        LongCycleB.class,
+                        LongCycleC.class))
         );
     }
 
     @ParameterizedTest
     @MethodSource("circularImmediateResolution")
-    void testImmediateCircularDependencyPathCanBeDetermined(List<Class<?>> path) {
+    void immediateCircularDependencyPathCanBeDetermined(List<Class<?>> path)
+            throws Exception {
         DependencyGraph dependencyGraph = this.buildDependencyGraph(path);
         CyclicDependencyGraphValidator validator = new CyclicDependencyGraphValidator();
 
         Set<GraphNode<DependencyContext<?>>> roots = dependencyGraph.roots();
-        Assertions.assertEquals(0, roots.size()); // Cyclic, thus no roots
+        // Cyclic, thus no roots
+        assertThat(roots).isEmpty();
 
         Set<GraphNode<DependencyContext<?>>> nodes = dependencyGraph.nodes();
-        Assertions.assertEquals(path.size(),
-            nodes.size()); // N nodes, no duplicates, but does contain all nodes
+        // N nodes, no duplicates, but does contain all nodes
+        assertThat(nodes).hasSameSizeAs(path);
 
         Map<? extends Class<?>, GraphNode<DependencyContext<?>>> nodesByType = nodes.stream()
-            .collect(Collectors.toMap(node -> node.value().componentKey().type(),
-                Function.identity()));
-        GraphNode<DependencyContext<?>> firstNode = nodesByType.get(path.get(0));
+                .collect(Collectors.toMap(node -> node.value().componentKey().type(),
+                        Function.identity()));
+        GraphNode<DependencyContext<?>> firstNode = nodesByType.get(path.getFirst());
 
         List<GraphNode<DependencyContext<?>>> recursivePath =
-            validator.checkNodeNotCyclicRecursive(firstNode, new ArrayList<>());
+                validator.checkNodeNotCyclicRecursive(firstNode, new ArrayList<>());
         ComponentDiscoveryList discoveryList = validator.createDiscoveryList(recursivePath,
-            this.applicationContext.environment().introspector());
-        Assertions.assertNotNull(discoveryList);
+                this.applicationContext.environment().introspector());
+        assertThat(discoveryList).isNotNull();
 
         List<DiscoveredComponent> discoveredComponents = discoveryList.discoveredComponents();
-        Assertions.assertEquals(path.size(), discoveredComponents.size());
+        assertThat(discoveredComponents).hasSameSizeAs(path);
 
         List<? extends Class<?>> discoveredTypes = discoveredComponents.stream()
-            .map(DiscoveredComponent::node)
-            .map(TypePathNode::type)
-            .map(TypeView::type)
-            .toList();
-        int startIndex = discoveredTypes.indexOf(path.get(0));
+                .map(DiscoveredComponent::node)
+                .map(TypePathNode::type)
+                .map(TypeView::type)
+                .toList();
+        int startIndex = discoveredTypes.indexOf(path.getFirst());
 
         for (int i = 0; i < path.size(); i++) {
-            Assertions.assertSame(path.get(i), discoveredTypes.get((startIndex + i) % path.size()));
+            assertThat(discoveredTypes.get((startIndex + i) % path.size())).isSameAs(path.get(i));
         }
     }
 
     @ParameterizedTest
     @MethodSource("circularDelayedResolution")
-    void testDelayedCircularDependencyPathIsEmpty(List<Class<?>> path) {
+    void delayedCircularDependencyPathIsEmpty(List<Class<?>> path)
+            throws Exception {
         DependencyGraph dependencyGraph = this.buildDependencyGraph(path);
         CyclicDependencyGraphValidator validator = new CyclicDependencyGraphValidator();
 
         Set<GraphNode<DependencyContext<?>>> roots = dependencyGraph.roots();
-        Assertions.assertEquals(0, roots.size()); // Cyclic, thus no roots
+        // Cyclic, thus no roots
+        assertThat(roots).isEmpty();
 
         Set<GraphNode<DependencyContext<?>>> nodes = dependencyGraph.nodes();
-        Assertions.assertEquals(path.size(),
-            nodes.size()); // N nodes, no duplicates, but does contain all nodes
+        // N nodes, no duplicates, but does contain all nodes
+        assertThat(nodes).hasSameSizeAs(path);
 
         Map<? extends Class<?>, GraphNode<DependencyContext<?>>> nodesByType = nodes.stream()
-            .collect(Collectors.toMap(node -> node.value().componentKey().type(),
-                Function.identity()));
-        GraphNode<DependencyContext<?>> firstNode = nodesByType.get(path.get(0));
+                .collect(Collectors.toMap(node -> node.value().componentKey().type(),
+                        Function.identity()));
+        GraphNode<DependencyContext<?>> firstNode = nodesByType.get(path.getFirst());
 
         List<GraphNode<DependencyContext<?>>> recursivePath =
-            validator.checkNodeNotCyclicRecursive(firstNode, new ArrayList<>());
+                validator.checkNodeNotCyclicRecursive(firstNode, new ArrayList<>());
         ComponentDiscoveryList discoveryList = validator.createDiscoveryList(recursivePath,
-            this.applicationContext.environment().introspector());
-        Assertions.assertNotNull(discoveryList);
+                this.applicationContext.environment().introspector());
+        assertThat(discoveryList).isNotNull();
 
         List<DiscoveredComponent> discoveredComponents = discoveryList.discoveredComponents();
-        Assertions.assertTrue(discoveredComponents.isEmpty());
+        assertThat(discoveredComponents).isEmpty();
     }
 
-    private DependencyGraph buildDependencyGraph(List<Class<?>> components) {
+    private DependencyGraph buildDependencyGraph(List<Class<?>> components)
+            throws DependencyResolutionException {
         Set<DependencyContext<?>> dependencyContexts = new HashSet<>();
         ApplicationEnvironment environment = this.applicationContext.environment();
         IntrospectionDependencyResolver dependencyResolver = new IntrospectionDependencyResolver(
-            environment.injectionPointsResolver(),
-            environment.componentKeyResolver()
+                environment.injectionPointsResolver(),
+                environment.componentKeyResolver()
         );
         for (Class<?> component : components) {
             ComponentKey<?> componentKey = ComponentKey.of(component);
             TypeView<?> typeView = environment.introspector().introspect(component);
 
             DependencyMap dependencyMap = DependencyMap.create()
-                // Fields and methods are always delayed, as they are not required for instantiation
-                .delayed(dependencyResolver.resolveDependencies(typeView));
+                    // Fields and methods are always delayed, as they are not required for
+                    // instantiation
+                    .delayed(dependencyResolver.resolveDependencies(typeView));
 
             View origin = typeView;
             if (!typeView.isInterface()) {
                 List<? extends ConstructorView<?>> constructorViews =
-                    typeView.constructors().all().stream()
-                        .filter(environment.injectionPointsResolver()::isInjectable)
-                        .toList();
+                        typeView.constructors().all().stream()
+                                .filter(environment.injectionPointsResolver()::isInjectable)
+                                .toList();
                 if (!constructorViews.isEmpty()) {
-                    Assertions.assertEquals(1, constructorViews.size());
-                    ConstructorView<?> constructorView = constructorViews.get(0);
+                    assertThat(constructorViews).hasSize(1);
+                    ConstructorView<?> constructorView = constructorViews.getFirst();
                     origin = constructorView;
-                    // Constructors are always immediate, as they are required to instantiate the component
+                    // Constructors are always immediate, as they are required to instantiate the
+                    // component
                     Set<ComponentKey<?>> immediateDependencies =
-                        dependencyResolver.resolveDependencies(constructorView);
+                            dependencyResolver.resolveDependencies(constructorView);
                     dependencyMap.putAll(DependencyResolutionType.IMMEDIATE, immediateDependencies);
                 }
             }
 
             ConfigurableDependencyContext<?> dependencyContext =
-                ConfigurableDependencyContext.builder(componentKey)
-                    .dependencies(dependencyMap)
-                    .priority(Priority.DEFAULT_PRIORITY)
-                    .memberType(ComponentMemberType.STANDALONE)
-                    .view(origin)
-                    .supplier(PrototypeInstantiationStrategy.empty())
-                    .build();
+                    ConfigurableDependencyContext.builder(componentKey)
+                            .dependencies(dependencyMap)
+                            .priority(Priority.DEFAULT_PRIORITY)
+                            .memberType(ComponentMemberType.STANDALONE)
+                            .view(origin)
+                            .supplier(PrototypeInstantiationStrategy.empty())
+                            .build();
             dependencyContexts.add(dependencyContext);
         }
 
         SimpleSingleElementContext<InjectionCapableApplication> context =
-            SimpleSingleElementContext.create(this.applicationContext);
+                SimpleSingleElementContext.create(this.applicationContext);
         DependencyResolver resolver =
-            ApplicationDependencyResolver.create(Customizer.useDefaults()).initialize(context);
+                ApplicationDependencyResolver.create(Customizer.useDefaults()).initialize(context);
         DependencyGraphBuilder dependencyGraphBuilder = DependencyGraphBuilder.create(
-            resolver,
-            this.applicationContext.defaultBinder(),
-            this.applicationContext.environment().introspector()
+                resolver,
+                this.applicationContext.defaultBinder(),
+                this.applicationContext.environment().introspector()
         );
-        return Assertions.assertDoesNotThrow(() -> dependencyGraphBuilder.buildDependencyGraph(
-            dependencyContexts));
+        return dependencyGraphBuilder.buildDependencyGraph(dependencyContexts);
     }
 
     @Test
-    void testCircularDependencyPathOnBoundTypeCanBeDetermined() {
+    void circularDependencyPathOnBoundTypeCanBeDetermined() throws Exception {
         // Bindings should be resolved during graph construction.
         this.applicationContext
-            .bind(InterfaceCircularDependencyA.class).to(BoundCircularDependencyA.class)
-            .bind(InterfaceCircularDependencyB.class).to(BoundCircularDependencyB.class);
+                .bind(InterfaceCircularDependencyA.class).to(BoundCircularDependencyA.class)
+                .bind(InterfaceCircularDependencyB.class).to(BoundCircularDependencyB.class);
 
         DependencyGraph dependencyGraph = this.buildDependencyGraph(List.of(
-            InterfaceCircularDependencyA.class,
-            InterfaceCircularDependencyB.class));
+                InterfaceCircularDependencyA.class,
+                InterfaceCircularDependencyB.class));
         CyclicDependencyGraphValidator validator = new CyclicDependencyGraphValidator();
 
         Set<GraphNode<DependencyContext<?>>> roots = dependencyGraph.roots();
-        Assertions.assertEquals(0, roots.size()); // Cyclic, so no roots
+        assertThat(roots).isEmpty(); // Cyclic, so no roots
 
         Set<GraphNode<DependencyContext<?>>> nodes = dependencyGraph.nodes();
-        Assertions.assertEquals(4, nodes.size()); // 4 nodes, 2 interfaces, 2 implementations
+        assertThat(nodes).hasSize(4); // 4 nodes, 2 interfaces, 2 implementations
 
         Map<? extends Class<?>, GraphNode<DependencyContext<?>>> nodesByType = nodes.stream()
-            .collect(Collectors.toMap(node -> node.value().componentKey().type(),
-                Function.identity()));
+                .collect(Collectors.toMap(node -> node.value().componentKey().type(),
+                        Function.identity()));
         GraphNode<DependencyContext<?>> firstNode = nodesByType.get(BoundCircularDependencyA.class);
 
         List<GraphNode<DependencyContext<?>>> recursivePath =
-            validator.checkNodeNotCyclicRecursive(firstNode, new ArrayList<>());
+                validator.checkNodeNotCyclicRecursive(firstNode, new ArrayList<>());
 
         ComponentDiscoveryList discoveryList = validator.createDiscoveryList(recursivePath,
-            this.applicationContext.environment().introspector());
+                this.applicationContext.environment().introspector());
         List<DiscoveredComponent> discoveredComponentsNonCyclic =
-            discoveryList.discoveredComponents();
-        Assertions.assertEquals(2, discoveredComponentsNonCyclic.size());
+                discoveryList.discoveredComponents();
+        assertThat(discoveredComponentsNonCyclic).hasSize(2);
 
         List<DiscoveredComponent> discoveredComponents = discoveryList.discoveredComponentsCyclic();
-        Assertions.assertEquals(3, discoveredComponents.size());
+        assertThat(discoveredComponents).hasSize(3);
 
-        DiscoveredComponent discoveredComponentA1 = discoveredComponents.get(0);
-        Assertions.assertSame(InterfaceCircularDependencyA.class,
-            discoveredComponentA1.node().type().type());
-        Assertions.assertSame(BoundCircularDependencyA.class,
-            discoveredComponentA1.actualType().type());
+        DiscoveredComponent discoveredComponentA1 = discoveredComponents.getFirst();
+        assertThat(discoveredComponentA1.node().type().type())
+                .isSameAs(InterfaceCircularDependencyA.class);
+        assertThat(discoveredComponentA1.actualType().type())
+                .isSameAs(BoundCircularDependencyA.class);
 
         DiscoveredComponent discoveredComponentB = discoveredComponents.get(1);
-        Assertions.assertSame(InterfaceCircularDependencyB.class,
-            discoveredComponentB.node().type().type());
-        Assertions.assertSame(BoundCircularDependencyB.class,
-            discoveredComponentB.actualType().type());
+        assertThat(discoveredComponentB.node().type().type())
+                .isSameAs(InterfaceCircularDependencyB.class);
+        assertThat(discoveredComponentB.actualType().type())
+                .isSameAs(BoundCircularDependencyB.class);
 
         DiscoveredComponent discoveredComponentA2 = discoveredComponents.get(2);
-        Assertions.assertSame(InterfaceCircularDependencyA.class,
-            discoveredComponentA2.node().type().type());
-        Assertions.assertSame(BoundCircularDependencyA.class,
-            discoveredComponentA2.actualType().type());
+        assertThat(discoveredComponentA2.node().type().type())
+                .isSameAs(InterfaceCircularDependencyA.class);
+        assertThat(discoveredComponentA2.actualType().type())
+                .isSameAs(BoundCircularDependencyA.class);
 
-        Assertions.assertEquals(discoveredComponentA1, discoveredComponentA2);
+        assertThat(discoveredComponentA2).isEqualTo(discoveredComponentA1);
     }
 }
